Добавить загрузку проектов команды
