# src/api/models/SpecBox/WebApi/Model/Common/project-response.ts
@@ -1,7 +1,7 @@
 /* tslint:disable */
 /* eslint-disable */
 import { VersionModel as SpecBoxWebApiModelCommonVersionModel } from '../../../../../models/SpecBox/WebApi/Model/Common/version-model';
-export interface ProjectModel {
+export interface ProjectResponse {
   code: string;
   description?: string | null;
   repositoryUrl?: string | null;
